[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s1-validin-dev"
version = "0.0.0"
requires-python = ">=3.12"
dependencies=[
    "synapse>=2.210.0,<3.0.0",
    "pytest>=8.0.0",
    "aioresponses>=0.7.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["test*"]
exclude = ["storm*", "docker*", "notebooks*", "docs*"]
